# pursuit-evasion-mpc-cbf

./: .gitignore  README.md  requirements.txt
2d_planar_sim/: agent.py  main.py  run_pursuer_count_grid.py  run_velocity_grid.py  simulation.py  solver.py
3d_quad_ws/mpc_interfaces/: CMakeLists.txt  package.xml
3d_quad_ws/mpc_interfaces/srv/: ConfigureScene.srv
3d_quad_ws/mpc_sphere_control/: package.xml  setup.cfg  setup.py
3d_quad_ws/mpc_sphere_control/mpc_sphere_control/: entities.py  pursuit_evasion_node.py  render_node.py
3d_quad_ws/mpc_sphere_control/mpc_sphere_control/mpc_cbf/: pursuit_evasion.py  solver.py
3d_quad_ws/mpc_sphere_control/rviz/: simple_mpc.rviz
