<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_sphere_control</name>
  <version>0.0.0</version>
  <description>MPC and CBF for 3D navigation</description>
  <maintainer email="gesemgudino@gmail.com">Gesem Mejia</maintainer>
  <maintainer email="ananya.ds.act@gmail.com">Ananya Acharya</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>
  
  <depend>mpc_interfaces</depend>
  <depend>mavros_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
